--- a/menu-items.html
+++ b/menu-items.html
@@ -243,7 +243,7 @@
                 <p>Prezzo: <span class="badge">3.00 €</span></p>
               </div>
             </div>
-            <div class="media">
+            <!-- <div class="media">
               <div class="media-left media-middle">
                 <img class="media-object" src="images/dishes/contorni/Insalata-mista.jpg" alt="Insalata mista">
               </div>
@@ -252,7 +252,7 @@
                 <p>Insalata mista di lattuga, pomodori e cetrioli.</p>
                 <p>Prezzo: <span class="badge">2.00 €</span></p>
               </div>
-            </div>
+            </div> -->
             <div class="media">
               <div class="media-left media-middle">
                 <img class="media-object" src="images/dishes/contorni/insalata-patate.jpg" alt="Insalata di patate">
