--- a/menu-items.html
+++ b/menu-items.html
@@ -243,16 +243,16 @@
                 <p>Prezzo: <span class="badge">3.00 €</span></p>
               </div>
             </div>
-            <!-- <div class="media">
+            <div class="media">
               <div class="media-left media-middle">
-                <img class="media-object" src="images/dishes/contorni/Insalata-mista.jpg" alt="Insalata mista">
+                <img class="media-object" src="images/dishes/contorni/insalata-mista.jpg" alt="Insalata mista">
               </div>
               <div class="media-body">
                 <h2 class="media-heading">Insalata Mista</h2>
                 <p>Insalata mista di lattuga, pomodori e cetrioli.</p>
                 <p>Prezzo: <span class="badge">2.00 €</span></p>
               </div>
-            </div> -->
+            </div>
             <div class="media">
               <div class="media-left media-middle">
                 <img class="media-object" src="images/dishes/contorni/insalata-patate.jpg" alt="Insalata di patate">
